package 실행 부분 제거